feature: Upgrade Stripe
Upgrade to the latest Stripe libraries which automatically lazy load the
library for us.

--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
     "@sentry/browser": "4.5.4",
+    "@stripe/react-stripe-js": "1.1.2",
+    "@stripe/stripe-js": "1.11.0",
     "@styled-system/theme-get": "5.1.2",
     "accounting": "0.4.1",
     "analytics-node": "2.4.1",
@@ -197,7 +199,6 @@
     "react-router": "4.2.0",
     "react-router-redux": "4.0.8",
     "react-scrollspy": "3.3.3",
-    "react-stripe-elements": "2.0.1",
     "react-waypoint": "8.0.0",
     "redis": "2.7.1",
     "redux": "3.6.0",
@@ -275,7 +276,6 @@
     "@types/react-overlays": "0.8.4",
     "@types/react-relay": "7.0.9",
     "@types/react-slick": "0.23.2",
-    "@types/react-stripe-elements": "1.1.7",
     "@types/react-test-renderer": "16.0.1",
     "@types/react-tracking": "7.0.0",
     "@types/react-transition-group": "2.0.11",
