--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ cypress/videos
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Webpack stats
+stats*.json
