--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
     "@artsy/xapp": "1.0.6",
-    "@babel/runtime": "^7.13.10",
+    "@babel/runtime": "7.13.10",
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
     "@sentry/browser": "4.5.4",
@@ -245,7 +245,6 @@
     "@babel/plugin-proposal-decorators": "7.13.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
     "@babel/plugin-proposal-optional-chaining": "7.13.8",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-transform-modules-commonjs": "7.13.8",
     "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.13.10",
@@ -254,12 +253,12 @@
     "@babel/register": "7.13.8",
     "@graphql-inspector/core": "1.14.0",
     "@loadable/babel-plugin": "5.13.2",
-    "@loadable/webpack-plugin": "5.14.0",
+    "@loadable/webpack-plugin": "5.14.2",
     "@sentry/cli": "1.41.2",
-    "@storybook/addon-actions": "^6.2.0-beta.11",
-    "@storybook/addon-essentials": "^6.2.0-beta.11",
-    "@storybook/addon-links": "^6.2.0-beta.11",
-    "@storybook/react": "^6.2.0-beta.11",
+    "@storybook/addon-actions": "6.2.0-beta.11",
+    "@storybook/addon-essentials": "6.2.0-beta.11",
+    "@storybook/addon-links": "6.2.0-beta.11",
+    "@storybook/react": "6.2.0-beta.11",
     "@types/autosuggest-highlight": "3.1.0",
     "@types/dd-trace": "0.6.0",
     "@types/dedent": "0.7.0",
@@ -292,18 +291,19 @@
     "@types/styled-system": "^5.1.10",
     "@types/styled-system__theme-get": "5.0.0",
     "@types/underscore.string": "0.0.32",
-    "@types/webpack": "4.4.24",
-    "@types/webpack-env": "1.13.6",
+    "@types/webpack": "4.41.26",
+    "@types/webpack-env": "1.16.0",
     "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-jest": "24.8.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-inline-react-svg": "0.2.0",
+    "@typescript-eslint/parser": "4.18.0",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.2",
+    "babel-plugin-inline-react-svg": "1.1.2",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-module-resolver": "3.1.0",
-    "babel-plugin-relay": "9.0.0",
-    "babel-plugin-styled-components": "1.11.1",
+    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-relay": "11.0.0",
+    "babel-plugin-styled-components": "1.12.0",
     "benv": "3.3.0",
+    "buffer": "6.0.3",
     "cache-loader": "1.2.2",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "coffee-loader": "0.8.0",
@@ -320,12 +320,10 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "4.0.4",
     "eslint-plugin-styled-components-a11y": "0.0.16",
-    "fork-ts-checker-notifier-webpack-plugin": "0.4.0",
-    "fork-ts-checker-webpack-plugin": "0.4.10",
-    "friendly-errors-webpack-plugin": "1.6.1",
+    "fork-ts-checker-webpack-plugin": "6.1.1",
     "graphql-tag": "2.10.3",
     "graphql-tools": "4.0.3",
-    "html-webpack-plugin": "4.5.0",
+    "html-webpack-plugin": "5.3.1",
     "hulk-editor": "craigspaeth/hulk",
     "husky": "3.0.5",
     "imagesloaded": "4.1.2",
@@ -340,13 +338,14 @@
     "jsdom-global": "3.0.2",
     "json-loader": "0.5.7",
     "konami-js": "0.0.2",
-    "levenary": "^1.1.1",
+    "levenary": "1.1.1",
     "lint-staged": "10.2.6",
     "mocha": "3.4.1",
     "mocha-junit-reporter": "1.22.0",
     "mocha-multi-reporters": "1.1.7",
     "nightmare": "2.10.0",
     "nyc": "13.3.0",
+    "os-browserify": "0.3.0",
     "patch-package": "6.2.0",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.0.5",
@@ -362,29 +361,28 @@
     "relay-test-utils": "9.1.0",
     "rewire": "2.2.0",
     "should": "13.2.3",
-    "simple-progress-webpack-plugin": "1.1.2",
     "sinon": "1.17.7",
     "speed-measure-webpack-plugin": "1.3.3",
     "static-extend": "0.1.2",
-    "storybook-states": "^1.2.0",
+    "storybook-states": "1.2.0",
     "strip-ansi": "5.0.0",
     "style-loader": "0.23.1",
     "stylus-loader": "3.0.2",
     "supertest": "2.0.1",
-    "terser-webpack-plugin": "4.1.0",
+    "terser-webpack-plugin": "5.1.1",
     "typescript": "4.2.3",
     "typescript-styled-plugin": "0.15.0",
     "vscode-apollo-relay": "1.5.1",
-    "webpack": "4.44.1",
-    "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-middleware": "3.5.1",
-    "webpack-hot-middleware": "2.24.3",
-    "webpack-manifest-plugin": "2.0.4",
+    "webpack": "5.24.4",
+    "webpack-bundle-analyzer": "4.4.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-middleware": "4.1.0",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-manifest-plugin": "3.0.0-rc.0",
     "webpack-merge": "4.2.1",
-    "webpack-node-externals": "1.7.2",
+    "webpack-node-externals": "2.5.2",
     "webpack-notifier": "1.7.0",
-    "webpack-retry-chunk-load-plugin": "1.2.0",
+    "webpack-retry-chunk-load-plugin": "2.0.3",
     "yn": "4.0.0"
   },
   "optionalDependencies": {
