--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
     "@artsy/xapp": "1.0.6",
+    "@babel/runtime": "^7.13.10",
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
     "@sentry/browser": "4.5.4",
@@ -250,7 +251,6 @@
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.13.0",
     "@babel/register": "7.13.8",
-    "@babel/runtime": "7.13.10",
     "@graphql-inspector/core": "1.14.0",
     "@loadable/babel-plugin": "5.13.2",
     "@loadable/webpack-plugin": "5.14.0",
