feat: add zendesk integration

--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "react-router-redux": "4.0.8",
     "react-scrollspy": "3.3.3",
     "react-waypoint": "8.0.0",
+    "react-zendesk": "^0.1.10",
     "redis": "2.7.1",
     "redux": "3.6.0",
     "redux-form": "7.2.3",
