refactor: Rename novo to clientConfig

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "yarn": "1.x.x"
   },
   "scripts": {
-    "build": "yarn build:assets:legacy && yarn build:assets:novo && yarn build:server",
-    "build:fast": "WEBPACK_DEBUG=true yarn build:assets:legacy && WEBPACK_DEBUG=true yarn build:assets:novo && WEBPACK_DEBUG=true yarn build:server",
+    "build": "yarn build:assets:legacy && yarn build:assets && yarn build:server",
+    "build:fast": "WEBPACK_DEBUG=true yarn build:assets:legacy && WEBPACK_DEBUG=true yarn build:assets && WEBPACK_DEBUG=true yarn build:server",
     "build:assets:legacy": "NODE_ENV=production BUILD_LEGACY_CLIENT=true yarn webpack",
-    "build:assets:novo": "NODE_ENV=production BUILD_NOVO_CLIENT=true yarn webpack",
+    "build:assets": "NODE_ENV=production BUILD_CLIENT=true yarn webpack",
     "build:server": "NODE_ENV=production BUILD_SERVER=true yarn webpack",
     "build-storybook": "build-storybook",
-    "bundle-report:assets": "WEBPACK_ANALYZE=true yarn build:assets:legacy",
-    "bundle-report:assets:novo": "WEBPACK_ANALYZE=true yarn build:assets:novo",
+    "bundle-report:assets:legacy": "WEBPACK_ANALYZE=true yarn build:assets:legacy",
+    "bundle-report:assets": "WEBPACK_ANALYZE=true yarn build:assets",
     "bundle-report:server": "WEBPACK_ANALYZE=true yarn build:server",
     "clean": "scripts/clean.sh",
     "compile": "babel src/v2 --out-dir dist/v2 -s --source-map --extensions '.js,.jsx,.ts,.tsx' --ignore src/v2/**/__tests__",
@@ -35,7 +35,7 @@
     "prettier-project": "yarn run prettier-write 'src/**/*.{ts,tsx,js,jsx}'",
     "prettier-write": "yarn run prettier --write",
     "publish-assets": "cd packages/publish && yarn && yarn publish-assets",
-    "publish-assets:local": "yarn clean && yarn build:assets:legacy && yarn build:assets:novo && yarn publish-assets",
+    "publish-assets:local": "yarn clean && yarn build:assets:legacy && yarn build:assets && yarn publish-assets",
     "relay": "relay-compiler",
     "sentry": "scripts/sentry.sh",
     "start": "scripts/start.sh",
@@ -43,7 +43,7 @@
     "start:dev:server": "NODE_ENV=development node --max_old_space_size=3072 -r dotenv/config ./src/index.dev.js",
     "start:dev:relay": "NODE_ENV=development yarn relay --watch",
     "start:dev:debug": "NODE_ENV=development node --inspect --max_old_space_size=3072 -r dotenv/config ./src/index.dev.js",
-    "start:prod": "yarn build:assets:legacy && yarn build:server && NODE_ENV=production yarn start",
+    "start:prod": "yarn build:assets:legacy && yarn build:assets && yarn build:server && NODE_ENV=production yarn start",
     "start:prod:debug": "NODE_ENV=production node --inspect --max_old_space_size=3072 -r dotenv/config ./server.dist.js",
     "sync-schema": "scripts/sync-schema-pull.sh",
     "sync-schema-local": "scripts/sync-schema-local.sh",
@@ -55,7 +55,7 @@
     "test:ci:mocha": "NODE_ENV=test yarn mocha src/**/*.test.js src/**/*.test.ts",
     "type-check": "tsc",
     "unlink-all": "yalc remove --all && yarn --check-files",
-    "stats:novo": "NODE_ENV=production BUILD_NOVO_CLIENT=true node --max_old_space_size=4096 -r dotenv/config -r @babel/register node_modules/.bin/webpack --profile --json --config ./webpack > stats.json",
+    "stats": "NODE_ENV=production BUILD_CLIENT=true node --max_old_space_size=4096 -r dotenv/config -r @babel/register node_modules/.bin/webpack --profile --json --config ./webpack > stats.json",
     "storybook": "start-storybook -p 6006",
     "webpack": "node --max_old_space_size=4096 -r dotenv/config -r @babel/register node_modules/.bin/webpack --config ./webpack"
   },
