--- a/package.json
+++ b/package.json
@@ -296,6 +296,7 @@
     "@types/webpack-env": "1.13.6",
     "@typescript-eslint/eslint-plugin": "2.30.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-inline-react-svg": "0.2.0",
