fix: Add react fast-refresh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,9 +27,5 @@
     "**/*.story.tsx"
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
-  }
+  "editor.formatOnSave": true
 }
