--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "@graphql-inspector/core": "1.14.0",
     "@loadable/babel-plugin": "5.13.2",
     "@loadable/webpack-plugin": "5.14.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@sentry/cli": "1.41.2",
     "@storybook/addon-actions": "^6.2.0-beta.11",
     "@storybook/addon-essentials": "^6.2.0-beta.11",
@@ -354,6 +355,7 @@
     "pug-loader": "2.4.0",
     "pull-lock": "1.0.0",
     "raw-loader": "0.5.1",
+    "react-refresh": "^0.9.0",
     "react-test-renderer": "16.8.6",
     "react-use-dimensions": "1.2.1",
     "relay-compiler": "9.1.0",
