--- a/package.json
+++ b/package.json
@@ -81,12 +81,12 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.3.1",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "^14.17.0",
+    "@artsy/palette": "14.17.0",
     "@artsy/passport": "1.8.0",
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
     "@artsy/xapp": "1.0.6",
-    "@babel/runtime": "^7.13.10",
+    "@babel/runtime": "7.13.10",
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
     "@sentry/browser": "4.5.4",
@@ -204,7 +204,7 @@
     "react-router-redux": "4.0.8",
     "react-scrollspy": "3.3.3",
     "react-waypoint": "8.0.0",
-    "react-zendesk": "^0.1.10",
+    "react-zendesk": "0.1.10",
     "redis": "2.7.1",
     "redux": "3.6.0",
     "redux-form": "7.2.3",
@@ -222,6 +222,7 @@
     "source-map-support": "0.5.10",
     "stickyfill": "1.1.1",
     "styled-components": "4.3.2",
+    "styled-system": "5.1.5",
     "stylus": "0.54.5",
     "superagent": "3.8.3",
     "tti-polyfill": "0.2.2",
@@ -256,12 +257,12 @@
     "@graphql-inspector/core": "1.14.0",
     "@loadable/babel-plugin": "5.13.2",
     "@loadable/webpack-plugin": "5.14.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@sentry/cli": "1.41.2",
-    "@storybook/addon-actions": "^6.2.0-beta.11",
-    "@storybook/addon-essentials": "^6.2.0-beta.11",
-    "@storybook/addon-links": "^6.2.0-beta.11",
-    "@storybook/react": "^6.2.0-beta.11",
+    "@storybook/addon-actions": "6.2.0-beta.11",
+    "@storybook/addon-essentials": "6.2.0-beta.11",
+    "@storybook/addon-links": "6.2.0-beta.11",
+    "@storybook/react": "6.2.0-beta.11",
     "@types/autosuggest-highlight": "3.1.0",
     "@types/dd-trace": "0.6.0",
     "@types/dedent": "0.7.0",
@@ -291,14 +292,14 @@
     "@types/relay-runtime": "9.1.6",
     "@types/relay-test-utils": "6.0.3",
     "@types/styled-components": "4.0.3",
-    "@types/styled-system": "^5.1.10",
+    "@types/styled-system": "5.1.10",
     "@types/styled-system__theme-get": "5.0.0",
     "@types/underscore.string": "0.0.32",
     "@types/webpack": "4.4.24",
     "@types/webpack-env": "1.13.6",
     "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "@typescript-eslint/parser": "4.18.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.0",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-inline-react-svg": "0.2.0",
@@ -311,6 +312,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "coffee-loader": "0.8.0",
     "coffeescript": "1.11.1",
+    "csstype": "3.0.7",
     "cypress": "5.1.0",
     "danger": "7.0.16",
     "ejs-compiled-loader": "3.0.0",
@@ -342,7 +344,7 @@
     "jsdom-global": "3.0.2",
     "json-loader": "0.5.7",
     "konami-js": "0.0.2",
-    "levenary": "^1.1.1",
+    "levenary": "1.1.1",
     "lint-staged": "10.2.6",
     "mocha": "3.4.1",
     "mocha-junit-reporter": "1.22.0",
@@ -356,7 +358,7 @@
     "pug-loader": "2.4.0",
     "pull-lock": "1.0.0",
     "raw-loader": "0.5.1",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "0.9.0",
     "react-test-renderer": "16.8.6",
     "react-use-dimensions": "1.2.1",
     "relay-compiler": "9.1.0",
@@ -368,7 +370,7 @@
     "simple-progress-webpack-plugin": "1.1.2",
     "sinon": "1.17.7",
     "static-extend": "0.1.2",
-    "storybook-states": "^1.2.0",
+    "storybook-states": "1.2.0",
     "style-loader": "0.23.1",
     "stylus-loader": "3.0.2",
     "supertest": "2.0.1",
