--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.4.0",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "14.22.0",
+    "@artsy/palette": "^14.25.0",
     "@artsy/passport": "1.8.0",
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
