Add infrastructural changes needed to support migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,17 @@ jobs:
     steps:
       - run: yarn type-check
 
+  # For strict type checking
+  betterer:
+    docker:
+      - image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/force:$CIRCLE_SHA1-builder
+        aws_auth:
+          aws_access_key_id: $AWS_ACCESS_KEY_ID
+          aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
+    working_directory: /app
+    steps:
+      - run: yarn betterer ci
+
   relay-check:
     docker:
       - image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/force:$CIRCLE_SHA1-builder
@@ -245,6 +256,12 @@ workflows:
             - builder-image-push
 
       - type-check:
+          <<: *not_staging_or_release
+          context: hokusai
+          requires:
+            - builder-image-push
+
+      - betterer:
           <<: *not_staging_or_release
           context: hokusai
           requires:
