--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,37 +21,20 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "target": "es2016",
-    "typeRoots": [
-      "./src/typings",
-      "./node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "jest",
-      "express",
-      "webpack-env"
-    ],
+    "typeRoots": ["./src/typings", "./node_modules/@types"],
+    "types": ["node", "jest", "express", "webpack-env"],
     "paths": {
-      "package.json": [
-        "./package.json"
-      ],
-      "v2/*": [
-        "./v2/*"
-      ],
+      "package.json": ["./package.json"],
+      "v2/*": ["./v2/*"]
     },
     "plugins": [
       {
         "name": "typescript-styled-plugin"
       }
     ],
-    "strict": false
+    "strict": false,
+    "strictNullChecks": true
   },
-  "include": [
-    "./src",
-  ],
-  "exclude": [
-    "src/**/__generated__/*.ts",
-    "**/node_modules",
-    "**/.*/",
-  ]
+  "include": ["./src"],
+  "exclude": ["src/**/__generated__/*.ts", "**/node_modules", "**/.*/"]
 }
