--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.5.0",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "14.28.1",
+    "@artsy/palette": "^14.28.2",
     "@artsy/passport": "1.8.0",
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
