Remove references to unmaintained URLs

--- a/.env.oss
+++ b/.env.oss
@@ -58,7 +58,7 @@ CONVECTION_APP_ID=
 CRITEO_ARTWORKS_ACCOUNT_NUMBER=
 CRITEO_AUCTIONS_ACCOUNT_NUMBER=
 GALAXY_PUBLISHABLE_TOKEN=
-GALAXY_URL=https://galaxy-production.herokuapp.com
+GALAXY_URL=https://galaxy-staging.artsy.net/
 GEMINI_ACCOUNT_KEY=force
 GEMINI_APP=
 GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net
