--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "12",
+    "node": ">=12.20.2",
     "yarn": "1.x.x"
   },
   "scripts": {
