--- a/package.json
+++ b/package.json
@@ -269,6 +269,9 @@
     "@storybook/addon-essentials": "6.3.7",
     "@storybook/addon-links": "6.3.7",
     "@storybook/react": "6.3.7",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "@types/autosuggest-highlight": "3.1.0",
     "@types/dd-trace": "0.6.0",
     "@types/dedent": "0.7.0",
@@ -301,6 +304,7 @@
     "@types/styled-components": "4.0.3",
     "@types/styled-system": "5.1.10",
     "@types/styled-system__theme-get": "5.0.0",
+    "@types/testing-library__react": "^10.2.0",
     "@types/underscore.string": "0.0.32",
     "@types/webpack": "4.4.24",
     "@types/webpack-env": "1.13.6",
@@ -330,9 +334,11 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-graphql": "3.1.1",
     "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-jest-dom": "^3.9.0",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "4.0.4",
     "eslint-plugin-styled-components-a11y": "0.0.16",
+    "eslint-plugin-testing-library": "^4.6.0",
     "fork-ts-checker-notifier-webpack-plugin": "0.4.0",
     "fork-ts-checker-webpack-plugin": "0.4.10",
     "friendly-errors-webpack-plugin": "1.6.1",
