--- a/hokusai/development.yml
+++ b/hokusai/development.yml
@@ -5,6 +5,7 @@ services:
 {% include 'templates/docker-compose-service.yml.j2' %}
     environment:
       - NODE_ENV=development
+      - REDIS_URL=redis://force-redis:6379/0
       - OPENREDIS_URL=redis://force-redis:6379/0
       - PORT=5000
       - S3_KEY
