feat(artwork): Converts artwork app to v3

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.5.0",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "14.33.0",
+    "@artsy/palette": "14.33.1",
     "@artsy/passport": "1.8.0",
     "@artsy/reaction": "29.0.2",
     "@artsy/stitch": "6.2.0",
@@ -229,6 +229,7 @@
     "underscore": "1.12.1",
     "underscore.string": "3.3.5",
     "updeep": "1.0.0",
+    "use-cursor": "^1.2.3",
     "useragent": "2.3.0",
     "uuid": "3.3.2",
     "validator": "7.0.0",
