--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "knox": "0.9.2",
     "lodash": "4.17.21",
     "mailcheck": "1.1.1",
+    "memoize-one": "^5.2.1",
     "moment": "2.22.2",
     "moment-timezone": "0.5.25",
     "moment-twitter": "0.2.0",
