--- a/package.json
+++ b/package.json
@@ -88,7 +88,9 @@
     "@babel/runtime": "7.13.10",
     "@loadable/component": "5.14.1",
     "@loadable/server": "5.14.0",
-    "@sentry/browser": "4.5.4",
+    "@sentry/browser": "6.7.1",
+    "@sentry/node": "^6.7.1",
+    "@sentry/tracing": "^6.7.1",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.11.0",
     "@styled-system/theme-get": "5.1.2",
@@ -185,7 +187,6 @@
     "qs": "6.5.2",
     "query-string": "5.1.1",
     "raf": "3.4.0",
-    "raven": "2.6.4",
     "raven-js": "3.27.0",
     "rc-slider": "7.0.8",
     "react": "17.0.2",
