move non sensitive values into example, edit setup sript

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-NODE_ENV=development
 # ------------------------
 # App Settings
 # ------------------------
@@ -30,3 +29,106 @@ NODE_ENV=development
 #
 # -- Display analytics calls in browser console
 # SHOW_ANALYTICS_CALLS=true
+
+# ------------------------
+# Staging Environment
+# ------------------------
+METAPHYSICS_ENDPOINT=https://metaphysics-staging.artsy.net/
+API_URL=https://stagingapi.artsy.net/
+POSITRON_URL=https://stagingwriter.artsy.net/
+
+# ------------------------
+# Production Environment
+# ------------------------
+# METAPHYSICS_ENDPOINT=https://metaphysics-production.artsy.net/
+# API_URL=https://api.artsy.net/
+# POSITRON_URL=https://writer.artsy.net/
+
+# ------------------------
+# Localhost Environment
+# ------------------------
+METAPHYSICS_ENDPOINT=http://localhost:5001/
+# REQUIRED SETUP: See https://github.com/artsy/force/blob/master/CONTRIBUTING.md#authentication-in-your-local-force-app
+# APP_URL=http://local.artsy.net:5000/
+APP_URL=http://localhost:5000/
+
+# ------------------------
+# Shared
+# ------------------------
+USER_TYPE=Admin
+API_REQUEST_TIMEOUT=10000
+APP_TIMEOUT=29s
+APPLICATION_NAME=
+PORT=5000
+COOKIE_DOMAIN=
+DEFAULT_CACHE_TIME=
+EMAIL_SIGNUP_IMAGES_ID=
+ERROR_PAGE_URL=
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+LINKEDIN_KEY=
+LINKEDIN_SECRET=
+MAINTENANCE_PAGE_URL=
+MARKETING_SIGNUP_MODALS=
+NEW_RELIC_LOG_LEVEL=
+OPENREDIS_URL=
+PAPERTRAIL_API_TOKEN=
+PREDICTION_URL=https://live-staging.artsy.net/
+PROFILE_MEMORY=
+SAILTHRU_KEY=
+SAILTHRU_SECRET=
+SENTRY_PRIVATE_DSN=
+SENTRY_ORG=artsynet
+SENTRY_PROJECT=force-staging
+SESSION_COOKIE_KEY=
+SESSION_COOKIE_MAX_AGE=
+STRIPE_PUBLISHABLE_KEY=
+WEBFONT_URL=http://webfonts.artsy.net/
+
+# ------------------------
+# Desktop
+# ------------------------
+ADMIN_URL=http://admin-staging.artsy.net/
+BIDDER_H2_COPY=
+CMS_URL=http://cms-staging.artsy.net/
+CONSIGNMENTS_APP_URL=https://sell.artsy.net/
+CONVECTION_APP_URL=https://convection-staging.artsy.net/
+CONVECTION_GEMINI_APP=convection-staging
+CRITEO_ARTWORKS_ACCOUNT_NUMBER=
+CRITEO_AUCTIONS_ACCOUNT_NUMBER=
+EDITORIAL_ADMINS=
+EOY_2016=
+EOY_2016_ARTICLE=
+GALAXY_URL=https://galaxy-production.herokuapp.com/
+GEMINI_APP=https://media.artsy.net/
+GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net/
+GENOME_URL=https://helix.artsy.net/
+IMAGE_PROXY=
+IP_BLACKLIST=
+MOBILE_URL=https://m.artsy.net/
+PARSELY_KEY=
+PARSELY_SECRET=
+REFLECTION_URL=http://artsy-reflection.s3-website-us-east-1.amazonaws.com/__reflection/47f98474592f66f9
+SAILTHRU_MASTER_LIST=
+SECURE_IMAGES_URL=https://d1ycxz9plii3tb.cloudfront.net/
+SEGMENT_WRITE_KEY_MICROGRAVITY=
+SESSION_SECRET=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_NUMBER=
+TWITTER_KEY=
+TWITTER_SECRET=
+TRACK_PAGELOAD_PATHS=|collect|artist
+
+# ------------------------
+# Mobile
+# ------------------------
+ARTSY_EDITORIAL_ID=
+CALENDAR_URL=
+EMBEDLY_KEY=
+EOY_2016_SLUGS=
+GOOGLE_ANALYTICS_ID=
+MAILCHIMP_KEY=
+MIXPANEL_ID=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
