--- a/.env.example
+++ b/.env.example
@@ -33,28 +33,29 @@
 # ------------------------
 # Staging Environment
 # ------------------------
-METAPHYSICS_ENDPOINT=https://metaphysics-staging.artsy.net/
-API_URL=https://stagingapi.artsy.net/
-POSITRON_URL=https://stagingwriter.artsy.net/
+METAPHYSICS_ENDPOINT=https://metaphysics-staging.artsy.net
+API_URL=https://stagingapi.artsy.net
+POSITRON_URL=https://stagingwriter.artsy.net
 
 # ------------------------
 # Production Environment
 # ------------------------
-# METAPHYSICS_ENDPOINT=https://metaphysics-production.artsy.net/
-# API_URL=https://api.artsy.net/
-# POSITRON_URL=https://writer.artsy.net/
+# METAPHYSICS_ENDPOINT=https://metaphysics-production.artsy.net
+# API_URL=https://api.artsy.net
+# POSITRON_URL=https://writer.artsy.net
 
 # ------------------------
 # Localhost Environment
 # ------------------------
-METAPHYSICS_ENDPOINT=http://localhost:5001/
+# METAPHYSICS_ENDPOINT=http://localhost:5001
 # REQUIRED SETUP: See https://github.com/artsy/force/blob/master/CONTRIBUTING.md#authentication-in-your-local-force-app
-# APP_URL=http://local.artsy.net:5000/
-APP_URL=http://localhost:5000/
+# APP_URL=http://local.artsy.net:5000
+APP_URL=http://localhost:5000
 
 # ------------------------
 # Shared
 # ------------------------
+NODE_ENV=development
 USER_TYPE=Admin
 API_REQUEST_TIMEOUT=10000
 APP_TIMEOUT=29s
@@ -73,7 +74,7 @@ MARKETING_SIGNUP_MODALS=
 NEW_RELIC_LOG_LEVEL=
 OPENREDIS_URL=
 PAPERTRAIL_API_TOKEN=
-PREDICTION_URL=https://live-staging.artsy.net/
+PREDICTION_URL=https://live-staging.artsy.net
 PROFILE_MEMORY=
 SAILTHRU_KEY=
 SAILTHRU_SECRET=
@@ -83,34 +84,34 @@ SENTRY_PROJECT=force-staging
 SESSION_COOKIE_KEY=
 SESSION_COOKIE_MAX_AGE=
 STRIPE_PUBLISHABLE_KEY=
-WEBFONT_URL=http://webfonts.artsy.net/
+WEBFONT_URL=http://webfonts.artsy.net
 
 # ------------------------
 # Desktop
 # ------------------------
-ADMIN_URL=http://admin-staging.artsy.net/
+ADMIN_URL=http://admin-staging.artsy.net
 BIDDER_H2_COPY=
-CMS_URL=http://cms-staging.artsy.net/
-CONSIGNMENTS_APP_URL=https://sell.artsy.net/
-CONVECTION_APP_URL=https://convection-staging.artsy.net/
+CMS_URL=http://cms-staging.artsy.net
+CONSIGNMENTS_APP_URL=https://sell.artsy.net
+CONVECTION_APP_URL=https://convection-staging.artsy.net
 CONVECTION_GEMINI_APP=convection-staging
 CRITEO_ARTWORKS_ACCOUNT_NUMBER=
 CRITEO_AUCTIONS_ACCOUNT_NUMBER=
 EDITORIAL_ADMINS=
 EOY_2016=
 EOY_2016_ARTICLE=
-GALAXY_URL=https://galaxy-production.herokuapp.com/
-GEMINI_APP=https://media.artsy.net/
-GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net/
-GENOME_URL=https://helix.artsy.net/
+GALAXY_URL=https://galaxy-production.herokuapp.com
+GEMINI_APP=https://media.artsy.net
+GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net
+GENOME_URL=https://helix.artsy.net
 IMAGE_PROXY=
 IP_BLACKLIST=
-MOBILE_URL=https://m.artsy.net/
+MOBILE_URL=https://m.artsy.net
 PARSELY_KEY=
 PARSELY_SECRET=
 REFLECTION_URL=http://artsy-reflection.s3-website-us-east-1.amazonaws.com/__reflection/47f98474592f66f9
 SAILTHRU_MASTER_LIST=
-SECURE_IMAGES_URL=https://d1ycxz9plii3tb.cloudfront.net/
+SECURE_IMAGES_URL=https://d1ycxz9plii3tb.cloudfront.net
 SEGMENT_WRITE_KEY_MICROGRAVITY=
 SESSION_SECRET=
 TWILIO_ACCOUNT_SID=
