--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "start:dev:relay": "NODE_ENV=development yarn relay --watch",
     "start:dev:debug": "NODE_ENV=development node --inspect --max_old_space_size=3072 ./src/dev.js",
     "start:prod": "yarn build:assets:legacy && yarn build:assets && yarn build:server && NODE_ENV=production yarn start",
-    "start:prod:debug": "NODE_ENV=production node --inspect --max_old_space_size=3072 -r dotenv/config ./server.dist.js",
+    "start:prod:debug": "NODE_ENV=production node --inspect --max_old_space_size=3072 ./server.dist.js",
     "sync-schema": "scripts/sync-schema-pull.sh",
     "sync-schema-local": "scripts/sync-schema-local.sh",
     "test": "concurrently 'yarn test:ci:jest:v1' 'yarn test:ci:jest:v2' 'yarn test:ci:mocha'",
@@ -54,9 +54,9 @@
     "test:ci:mocha": "NODE_ENV=test yarn mocha src/**/*.test.js src/**/*.test.ts",
     "type-check": "tsc",
     "unlink-all": "yalc remove --all && yarn --check-files",
-    "stats:assets": "WEBPACK_CONCATENATE=false WEBPACK_STATS=normal NODE_ENV=production BUILD_CLIENT=true node --max_old_space_size=4096 -r dotenv/config -r @babel/register node_modules/.bin/webpack --profile --json --config ./webpack > stats.json",
+    "stats:assets": "WEBPACK_CONCATENATE=false WEBPACK_STATS=normal NODE_ENV=production BUILD_CLIENT=true node --max_old_space_size=4096 -r @babel/register node_modules/.bin/webpack --profile --json --config ./webpack > stats.json",
     "storybook": "start-storybook -p 6006",
-    "webpack": "node --max_old_space_size=4096 -r dotenv/config -r @babel/register node_modules/.bin/webpack --config ./webpack"
+    "webpack": "node --max_old_space_size=4096 -r @babel/register node_modules/.bin/webpack --config ./webpack"
   },
   "resolutions": {
     "@types/react": "16.9.34",
