repurpose .env.oss as .env.shared

--- a/.env.oss
+++ b/.env.oss
@@ -1,4 +1,4 @@
-# OSS version of the .env file
+# OSS version of the .env.shared file
 # Note: The CLIENT_ID & CLIENT_SECRET are known keys for Artsy OSS
 # projects, and are not a problem. OSS people: Please don't abuse the keys,
 # as then we'll have to change it, making it harder for others to learn from.
@@ -20,7 +20,6 @@ RECAPTCHA_KEY=
 CONVECTION_APP_ID=
 GALAXY_PUBLISHABLE_TOKEN=
 GEMINI_S3_ACCESS_KEY=
-GENOME_URL=https://helix.artsy.net
 IP_DENYLIST=
 
 # Needed to run Reaction via yarn link
