--- a/.env.oss
+++ b/.env.oss
@@ -1,6 +1,6 @@
 # OSS version of the .env.shared file
 # Note: The CLIENT_ID & CLIENT_SECRET are known keys for Artsy OSS
-# projects, and are not a problem. OSS people: Please don't abuse the keys,
+# projects, and are not a problem. OSS contributors: Please don't abuse the keys,
 # as then we'll have to change it, making it harder for others to learn from.
 # As such, these keys do not come under the Artsy security bounty either.
 
