update source controlled dot env files

--- a/.env.oss
+++ b/.env.oss
@@ -4,23 +4,25 @@
 # as then we'll have to change it, making it harder for others to learn from.
 # As such, these keys do not come under the Artsy security bounty either.
 
-# Shared
+# ------------------------
+# OSS Environment
+# ------------------------
 CLIENT_ID=e750db60ac506978fc70
 CLIENT_SECRET=3a33d2085cbd1176153f99781bbce7c6
-GOOGLE_MAPS_API_KEY=
-S3_BUCKET=
-SEGMENT_WRITE_KEY=
-SEGMENT_WRITE_KEY_SERVER=
-SENTRY_PRIVATE_DSN=
-SENTRY_PUBLIC_DSN=
-VOLLEY_ENDPOINT=
-RECAPTCHA_KEY=
-
-# Desktop
-CONVECTION_APP_ID=
-GALAXY_PUBLISHABLE_TOKEN=
-GEMINI_S3_ACCESS_KEY=
-IP_DENYLIST=
-
-# Needed to run Reaction via yarn link
-GRAPHQL_ENDPOINT=https://metaphysics-staging.artsy.net
+METAPHYSICS_ENDPOINT=https://metaphysics-staging.artsy.net
+API_URL=https://stagingapi.artsy.net
+POSITRON_URL=https://stagingwriter.artsy.net
+PREDICTION_URL=https://live-staging.artsy.net
+ADMIN_URL=http://admin-staging.artsy.net
+CMS_URL=http://cms-staging.artsy.net
+API_REQUEST_TIMEOUT=10000
+APP_TIMEOUT=29s
+PORT=5000
+WEBFONT_URL=http://webfonts.artsy.net
+CONSIGNMENTS_APP_URL=https://sell.artsy.net
+GEMINI_ACCOUNT_KEY=force
+GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net
+GENOME_URL=https://helix.artsy.net
+REFLECTION_URL=http://artsy-reflection.s3-website-us-east-1.amazonaws.com/__reflection/47f98474592f66f9
+SECURE_IMAGES_URL=https://d1ycxz9plii3tb.cloudfront.net
+GALAXY_URL=https://galaxy-production.herokuapp.com
