--- a/.env.example
+++ b/.env.example
@@ -36,4 +36,8 @@
 # REQUIRED SETUP: See https://github.com/artsy/force/blob/master/CONTRIBUTING.md#authentication-in-your-local-force-app
 # APP_URL=http://local.artsy.net:5000
 APP_URL=http://localhost:5000
+APP_TIMEOUT=29s
+API_REQUEST_TIMEOUT=10000
 NODE_ENV=development
+PORT=5000
+USER_TYPE=Admin
