--- a/.env.oss
+++ b/.env.oss
@@ -15,13 +15,10 @@ POSITRON_URL=https://stagingwriter.artsy.net
 PREDICTION_URL=https://live-staging.artsy.net
 ADMIN_URL=http://admin-staging.artsy.net
 CMS_URL=http://cms-staging.artsy.net
-API_REQUEST_TIMEOUT=10000
-APP_TIMEOUT=29s
-PORT=5000
 WEBFONT_URL=http://webfonts.artsy.net
 GEMINI_ACCOUNT_KEY=force
 GEMINI_CLOUDFRONT_URL=https://d7hftxdivxxvm.cloudfront.net
 GENOME_URL=https://helix.artsy.net
 REFLECTION_URL=http://artsy-reflection.s3-website-us-east-1.amazonaws.com/__reflection/47f98474592f66f9
 SECURE_IMAGES_URL=https://d1ycxz9plii3tb.cloudfront.net
-GALAXY_URL=https://galaxy-production.herokuapp.com
+GALAXY_URL=https://galaxy-staging.artsy.net
