--- a/hokusai/development.yml
+++ b/hokusai/development.yml
@@ -2,7 +2,10 @@
 version: "3.8"
 services:
   force:
-{% include 'templates/docker-compose-service.yml.j2' %}
+    image: hokusai_force:latest
+    build:
+      context: ../
+      target: builder-src
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis://force-redis:6379/0
@@ -11,7 +14,6 @@ services:
       - S3_KEY
       - S3_SECRET
       - DEPLOY_ENV
-    env_file: ../.env
     command: ["yarn", "start:dev"]
     ports:
       - 5000:5000
