fix acceptance test hanging

--- a/.env.oss
+++ b/.env.oss
@@ -7,6 +7,9 @@
 # ------------------------
 # OSS Environment
 # ------------------------
+APP_TIMEOUT=29s
+API_REQUEST_TIMEOUT=10000
+PORT=5000
 CLIENT_ID=e750db60ac506978fc70
 CLIENT_SECRET=3a33d2085cbd1176153f99781bbce7c6
 METAPHYSICS_ENDPOINT=https://metaphysics-staging.artsy.net
