add the development.yml env_file prop back in for consistency

--- a/hokusai/development.yml
+++ b/hokusai/development.yml
@@ -14,6 +14,9 @@ services:
       - S3_KEY
       - S3_SECRET
       - DEPLOY_ENV
+    env_file:
+      - ../.env.shared
+      - ../.env
     command: ["yarn", "start:dev"]
     ports:
       - 5000:5000
