feat: (PLATFORM-3135) turn-key dev env (#8031)
* add setup script, minimal example env

* move non sensitive values into example, edit setup sript

* edit example env

* add env pre-processing and update dev start

* merge .env.oss with .env.example

* remove dotenv preloading and import loadenv instead in index.js

* edit setup aws download step

* edit src/loadenv

* repurpose .env.oss as .env.shared

* update contributing doc

* edit wording

* use loadenv in uploadToS3

* remove unused vars, use process.env instead of ./config

* update source controlled dot env files

* edit setup script

* undo change in smoke_test script

* remove CONSIGNMENTS_APP_URL env var from source

* edit dotenv files

* update setup script

* update development compose, docker files, add concurrently

* remove jina template and instead target builder-src
  build step to prevent double compiling of code
* remove example dotenv from docker build
* add concurrently to dev deps to fix dockerized development build

* revert to require dotenv in uploadToS3 script, remove unused var

* use require statements in loadenv

* edit setup script

* fix acceptance test hanging

* remove diagnose.js (checked in mistakenly)

* update docs with shared configuration info

* add the development.yml env_file prop back in for consistency

* add links to shared config doc

* cleanup development.yml environment

--- a/hokusai/development.yml
+++ b/hokusai/development.yml
@@ -2,16 +2,18 @@
 version: "3.8"
 services:
   force:
-{% include 'templates/docker-compose-service.yml.j2' %}
+    image: hokusai_force:latest
+    build:
+      context: ../
+      target: builder-src
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis://force-redis:6379/0
       - OPENREDIS_URL=redis://force-redis:6379/0
       - PORT=5000
-      - S3_KEY
-      - S3_SECRET
-      - DEPLOY_ENV
-    env_file: ../.env
+    env_file:
+      - ../.env.shared
+      - ../.env
     command: ["yarn", "start:dev"]
     ports:
       - 5000:5000
