chore: Decaffeinate Config Files
There has been a lot of confusion recently about the multiple config
files in force. This change decaffeinates the old configuation files
and merges them together into a single unified `config.ts` file.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,11 @@ manifest-legacy-artwork-dll.json
 
 # Do not ignore .env.example
 !.env.example
+
+# Intelli
+.idea/
+
+# Depdency Cruiser
+.dependency-cruiser.js
+depcruiser*
+*.html
