--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.9.0",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "14.55.0",
+    "@artsy/palette": "16.0.0",
+    "@artsy/palette-charts": "15.0.0",
     "@artsy/passport": "3.1.0",
     "@artsy/reaction": "29.2.1",
     "@artsy/stitch": "6.3.0",
