feature: Minimize Moment Timezone
Moment Timezome provides a webpack plugin that minimizes the timezone
data we need to include client side, this adds the plugin and limits the
timezones to the only one that is used in v2 apps `American/New_York`

--- a/package.json
+++ b/package.json
@@ -355,6 +355,7 @@
     "mocha": "3.4.1",
     "mocha-junit-reporter": "1.22.0",
     "mocha-multi-reporters": "1.1.7",
+    "moment-timezone-data-webpack-plugin": "1.5.0",
     "nyc": "13.3.0",
     "patch-package": "6.2.0",
     "postinstall-prepare": "1.0.1",
