--- a/package.json
+++ b/package.json
@@ -352,6 +352,7 @@
     "konami-js": "0.0.2",
     "levenary": "1.1.1",
     "lint-staged": "10.2.6",
+    "lodash-webpack-plugin": "0.11.6",
     "mocha": "3.4.1",
     "mocha-junit-reporter": "1.22.0",
     "mocha-multi-reporters": "1.1.7",
