--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "@types/jwt-decode": "2.2.0",
     "@types/loadable__component": "5.13.1",
     "@types/lodash": "4.14.111",
+    "@types/lodash-webpack-plugin": "^0.11.6",
     "@types/memoize-one": "3.1.1",
     "@types/morgan": "1.9.2",
     "@types/node": "12.20.13",
