test(RTL): bump Jest's version of jsdom to v13
To get around RTL's "MutationObserver is not a constructor" error

This can likely be undone when we succesfully upgrade to Jest 25+

--- a/package.json
+++ b/package.json
@@ -352,6 +352,7 @@
     "inquirer": "1.2.3",
     "jest": "24.9.0",
     "jest-coffee-preprocessor": "1.0.0",
+    "jest-environment-jsdom-thirteen": "^1.0.1",
     "jest-junit": "6.4.0",
     "jest-styled-components": "7.0.4",
     "jest-transform-graphql": "2.1.0",
