--- a/.dockerignore
+++ b/.dockerignore
@@ -22,7 +22,7 @@
 !.env.oss
 !.env.test
 !cypress.json
-!jest.config.v1.js
+!jest.config.legacy.js
 !jest.config.v2.js
 !test.config.js
 !test.mocha.js
