--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "start:prod:debug": "SESSION_LOCAL_INSECURE=true NODE_ENV=production node --inspect --max_old_space_size=3072 ./server.dist.js",
     "sync-schema": "scripts/sync-schema-pull.sh",
     "sync-schema-local": "scripts/sync-schema-local.sh",
-    "test": "concurrently 'yarn test:ci:jest:v1' 'yarn test:ci:jest:v2' 'yarn test:ci:mocha'",
+    "test": "concurrently 'yarn test:ci:jest:legacy' 'yarn test:ci:jest:v2' 'yarn test:ci:mocha'",
     "test:smoke": "scripts/smoke_test.sh",
-    "test:ci:jest:v1": "scripts/jest.sh v1",
+    "test:ci:jest:legacy": "scripts/jest.sh legacy",
     "test:ci:jest:v2": "scripts/jest.sh v2",
     "test:ci:mocha": "NODE_ENV=test yarn mocha src/**/*.test.js src/**/*.test.ts",
     "type-check": "tsc",
