test(hooks): add react testing libary hooks with 2 examples

--- a/package.json
+++ b/package.json
@@ -270,6 +270,7 @@
     "@storybook/react": "6.3.7",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.1.9",
     "@types/autosuggest-highlight": "3.1.0",
     "@types/dd-trace": "0.6.0",
