--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "react-autosuggest": "9.4.3",
     "react-css-transition-replace": "4.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-head": "3.0.2",
     "react-linkify": "1.0.0-alpha",
     "react-redux": "5.1.1",
