--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sync-schema-local": "scripts/sync-schema-local.sh",
     "test": "concurrently 'yarn test:ci:jest:legacy' 'yarn test:ci:jest:v2' 'yarn test:ci:mocha'",
     "test:smoke": "scripts/smoke_test.sh",
+		"test:smoke:spec": "./node_modules/.bin/cypress run -s",
     "test:ci:jest:legacy": "scripts/jest.sh legacy",
     "test:ci:jest:v2": "scripts/jest.sh v2",
     "test:ci:mocha": "NODE_ENV=test yarn mocha src/**/*.test.js src/**/*.test.ts",
