toolchain(jsx-runtime): Auto import React via new jsx-runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "commonjs",
     "moduleResolution": "node",
     "noUnusedLocals": true,
