add --no-stash option to lint-staged

--- a/package.json
+++ b/package.json
@@ -414,7 +414,7 @@
   "husky": {
     "hooks": {
       "post-merge": "sh scripts/pull-lock.sh",
-      "pre-commit": "lint-staged",
+      "pre-commit": "lint-staged --no-stash",
       "pre-push": "yarn type-check"
     }
   },
