--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "flickity": "2.1.2",
     "flickity-imagesloaded": "2.0.0",
     "focus-visible": "5.1.0",
-    "formik": "2.2.5",
+    "formik": "^2.2.9",
     "found": "0.5.5",
     "found-relay": "0.8.2",
     "found-scroll": "0.3.0",
