--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,9 +340,13 @@ workflows:
 
       # Release
       - horizon/block:
-          <<: *only_release
           context: horizon
           project_id: 11
+          filters:
+            branches:
+              only:
+                - release
+                - staging
 
       - validate_production_schema:
           <<: *only_release
