--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ cypress/screenshots
 reports*
 junit.xml
 cypress/videos
+.last-run.json
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
