--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "test": "scripts/jest.sh",
     "test:smoke": "npx cypress run",
     "test:smoke:spec": "npx cypress run --spec",
+    "test:smoke2": "npx playwright test",
     "type-check": "tsc",
     "storybook": "storybook dev -p 6006"
   },
@@ -199,6 +200,7 @@
     "@graphql-inspector/core": "1.14.0",
     "@graphql-tools/jest-transform": "^2.0.0",
     "@loadable/webpack-plugin": "5.15.2",
+    "@playwright/test": "^1.54.1",
     "@relative-ci/agent": "^4.2.10",
     "@rsbuild/core": "^1.2.3",
     "@rsbuild/plugin-assets-retry": "^1.1.0",
