Update .gitignore to track claude.local.md
Removed .claude.local.md from .gitignore and added claude.local.md to be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 .cache
 .cache-loader
 .claude/settings.local.json
-.claude.local.md
 .DS_Store
 .env
 .env.*
@@ -19,6 +18,7 @@
 *.pid
 *.projectile
 *.seed
+claude.local.md
 dump.rdb
 lib-cov
 logs
